ajout des dossier img a intégrer

--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="fr-BE">
 <head>
     <meta charset="UTF-8">
-    <title>Royal Oak Automatique | Audemars Piguet</title>
-    <meta name="description"
-          content="La Royal Oak Automatique 41 mm en acier inoxydable. Une icône du design horloger avec son cadran Grande Tapisserie.">
+    <title>Royal Oak Quantième Perpétuel | Audemars Piguet</title>
+    <meta name="description" content="Découvrez la Royal Oak Quantième Perpétuel (Ref. 26574TI). Une montre d'exception en titane de 41 mm, dotée du Calibre 5134 extra-plat.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/css/style.css">
 
@@ -30,10 +29,9 @@
 
 <header>
     <p class="brand-name">Royal Oak</p>
-    <img src="./src/placeholder-image-750x750.jpg" alt="Vue de face de la Royal Oak Automatique cadran bleu" width="750"
-         height="750" fetchpriority="high">
-    <nav aria-labelledby="title-navModels">
-        <h2 id="title-navModels" class="visually-hidden">Navigation principale des collections</h2>
+    <img src="./src/img/desktop/main-desktop.webp" alt="Vue de face de la Royal Oak Automatique cadran bleu" width="320"
+         height="427" fetchpriority="high">
+    <nav aria-label="Navigation principale des collections">
         <ul>
             <li>
                 <a href="https://www.audemarspiguet.com/com/fr/watch-collection.html?view=core-collection&collection=COL_017%2CCOL_019%2CCOL_018"
@@ -57,9 +55,12 @@
 <main id="main-content" itemscope itemtype="https://schema.org/Product">
 
     <meta itemprop="brand" content="Audemars Piguet">
+    <meta itemprop="name" content="Royal Oak Quantième Perpétuel">
+    <meta itemprop="description" content="Découvrez la Royal Oak Quantième Perpétuel (Ref. 26574TI). Une montre d'exception en titane de 41 mm, dotée du Calibre 5134 extra-plat et d'un cadran Grande Tapisserie. Disponible exclusivement en boutique Audemars Piguet.">
+    <link itemprop="availability" href="https://schema.org/InStoreOnly">
 
     <section aria-labelledby="title-model">
-        <h1 id="title-model" itemprop="name">Quantième Perpétuel</h1>
+        <h1 id="title-model">Quantième Perpétuel</h1>
 
         <p>Ref.&nbsp;<span itemprop="sku">26574TI.OO.1220TI.01</span></p>
         <div itemprop="offers" itemscope itemtype="https://schema.org/Offer">
@@ -83,7 +84,7 @@
             </a>
         </div>
 
-        <p itemprop="description"><small>Boîte en titane, glace et fond saphir avec traitement anti-reflets.</small></p>
+        <p>Boîte en titane, glace et fond saphir avec traitement anti-reflets.</p>
 
         <section aria-labelledby="specs-heading">
             <h2 id="specs-heading">Détails techniques</h2>
@@ -107,6 +108,8 @@
                 </dd>
             </dl>
 
+            <img src="./src/img/desktop/Tous%20les%20détails%20techniques-desktop.webp" alt="" width="654" height="492" loading="lazy" decoding="async">
+
             <a href="https://www.audemarspiguet.com/content/dam/ap/com/digital-user-guide/5134/col_017/index.html">Tous
                 les détails techniques
                 <span class="visually-hidden">(s'ouvre dans un nouvel onglet)</span>
@@ -116,16 +119,13 @@
 
     <section aria-labelledby="philosophy-heading">
         <h2 id="philosophy-heading">Pour briser les règles, il faut d'abord les maîtriser.</h2>
-        <img src="./src/placeholder-image-750x750.jpg" alt="" role="presentation"
-             width="750" height="750" loading="lazy" decoding="async">
+        <img itemprop="image" src="./src/img/desktop/briser-les%20regles-desktop.webp" alt="" width="1580" height="1054" loading="lazy" decoding="async">
 
         <p>Depuis 1875, Audemars Piguet perpétue le savoir-faire ancestral de ses fondateurs tout en repoussant toujours
             plus loin les limites de l'art horloger. La Royal Oak en est l'expression ultime.</p>
 
-        <img src="./src/placeholder-image-750x750.jpg" alt="" role="presentation"
-             width="750" height="750" loading="lazy" decoding="async">
-        <img src="./src/placeholder-image-750x750.jpg" alt="" role="presentation"
-             width="750" height="750" loading="lazy" decoding="async">
+        <img src="./src/img/desktop/briser%20les%20regles%20decoratif%201%20desktop.webp" alt="" width="1000" height="1000" loading="lazy" decoding="async">
+        <img src="./src/img/desktop/briser%20les%20regles%20decoratif%202%20desktop.webp" alt="" width="800" height="533" loading="lazy" decoding="async">
     </section>
 
     <section aria-labelledby="features-heading">
@@ -134,8 +134,8 @@
         <ul class="features-list">
             <li>
                 <div class="feature-card">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Croquis original de Gérald Genta" width="750"
-                         height="750" loading="lazy" decoding="async">
+                    <img src="./src/img/desktop/revolution-esthetique-desktop-large.webp" alt="Croquis original de Gérald Genta" width="1580"
+                         height="1054" loading="lazy" decoding="async">
                     <h3>Une révolution esthétique.</h3>
                     <p>Dessinée par Gérald Genta en 1972, la Royal Oak fut la première montre de sport de luxe en acier,
                         bouleversant les codes de la haute horlogerie.</p>
@@ -144,8 +144,8 @@
 
             <li>
                 <div class="feature-card">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Gros plan sur la lunette octogonale" width="750"
-                         height="750" loading="lazy" decoding="async">
+                    <img src="./src/img/desktop/Lunette%20Octogonale%20desktop.webp" alt="Gros plan sur la lunette octogonale" width="900"
+                         height="600" loading="lazy" decoding="async">
                     <h3>Lunette Octogonale.</h3>
                     <p>Inspirée par un scaphandre, la lunette octogonale est fixée par huit vis hexagonales en or blanc,
                         devenues la signature visuelle de la collection.</p>
@@ -154,8 +154,8 @@
 
             <li>
                 <div class="feature-card">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Motif Grande Tapisserie du cadran" width="750"
-                         height="750" loading="lazy" decoding="async">
+                    <img src="./src/img/desktop/grande-tapisserie-desktop.webp" alt="Motif Grande Tapisserie du cadran" width="600"
+                         height="600" loading="lazy" decoding="async">
                     <h3>Une révolution esthétique.</h3>
                     <p>Le motif « Grande Tapisserie », réalisé grâce à un savoir-faire rare de guillochage, offre des
                         reflets uniques et une texture inimitable.</p>
@@ -164,8 +164,8 @@
 
             <li>
                 <div class="feature-card">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Maillons du bracelet intégré" width="750"
-                         height="750" loading="lazy" decoding="async">
+                    <img src="./src/img/desktop/Calibre%20Manufacture%20desktop.webp" alt="Maillons du bracelet intégré" width="901"
+                         height="600" loading="lazy" decoding="async">
                     <h3>Calibre Manufacture.</h3>
                     <p>Le cœur de la montre bat au rythme du Calibre 5134, un mouvement automatique conçu pour la
                         précision et la fiabilité.</p>
@@ -535,14 +535,17 @@
     </section>
 </main>
 
-<footer role="contentinfo">
+<footer>
     <section aria-labelledby="region-heading">
         <h2 id="region-heading">Région / Langue Actuelle</h2>
         <div>
-            <img src="./src/placeholder-image-750x750.jpg" alt="Drapeau de la Belgique" width="750" height="750"
-                 loading="lazy" decoding="async">
+            <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M18.8998 0.816667C17.3831 0.233333 15.7498 0 13.9998 0C12.2498 0 10.6164 0.35 9.09977 0.816667L7.93311 14L9.09977 27.1833C10.6164 27.7667 12.2498 28 13.9998 28C15.7498 28 17.3831 27.65 18.8998 27.1833L20.0664 14L18.8998 0.816667Z" fill="#FFDA44"/>
+                <path d="M27.9999 13.9997C27.9999 7.93307 24.1499 2.79974 18.8999 0.816406V27.0664C24.1499 25.1997 27.9999 20.0664 27.9999 13.9997Z" fill="#D80027"/>
+                <path d="M0 13.9997C0 20.0664 3.85 25.1997 9.1 27.1831V0.816406C3.85 2.79974 0 7.93307 0 13.9997Z" fill="black"/>
+            </svg>
             <span>Belgique / Français</span>
-            <a href="https://www.audemarspiguet.com/com/fr/about/savoir-faire/design.html"
+            <a href="https://www.audemarspiguet.com/com/fr/services/all-services.html"
                aria-label="Changer la région ou la langue" target="_blank" rel="noopener noreferrer" hreflang="fr">Changer
                 <span class="visually-hidden">(s'ouvre dans un nouvel onglet)</span>
             </a>
@@ -645,7 +648,8 @@
 
     <section aria-labelledby="AP-foundation">
         <h3 id="AP-foundation">Fondation Audemars Piguet</h3>
-        <p>Depuis 1992, la manufacture s’engage pour la conservation des forêts dans le monde et la sensibilisation des jeunes générations à l'environnement. Découvrez nos actions concrètes pour la biodiversité.</p>
+        <p>Depuis 1992, la manufacture s’engage pour la conservation des forêts dans le monde et la sensibilisation des
+            jeunes générations à l'environnement. Découvrez nos actions concrètes pour la biodiversité.</p>
         <a href="https://fondationsaudemarspiguet.org/fr" target="_blank" rel="noopener noreferrer"
            hreflang="fr">Découvrir la fondation
             <span class="visually-hidden">(s'ouvre dans un nouvel onglet)</span>
@@ -654,7 +658,8 @@
 
     <section aria-labelledby="workshop-museum">
         <h3 id="workshop-museum">Musée Atelier</h3>
-        <p>Plongez au cœur de la Vallée de Joux. Une immersion architecturale et historique où le passé de la marque rencontre l'avenir, et où les horlogers travaillent sous les yeux des visiteurs.</p>
+        <p>Plongez au cœur de la Vallée de Joux. Une immersion architecturale et historique où le passé de la marque
+            rencontre l'avenir, et où les horlogers travaillent sous les yeux des visiteurs.</p>
         <a href="https://museeatelier.audemarspiguet.com/fr/home.html" target="_blank" rel="noopener noreferrer"
            hreflang="fr">Visitez le musée
             <span class="visually-hidden">(s'ouvre dans un nouvel onglet)</span>
@@ -663,7 +668,8 @@
 
     <section aria-labelledby="press-area">
         <h3 id="press-area">Espace Presse</h3>
-        <p>Accès réservé aux médias et journalistes. Retrouvez ici les communiqués officiels, les dossiers de presse et la banque d'images haute définition des dernières collections.</p>
+        <p>Accès réservé aux médias et journalistes. Retrouvez ici les communiqués officiels, les dossiers de presse et
+            la banque d'images haute définition des dernières collections.</p>
         <a href="https://press.audemarspiguet.com/log-in" target="_blank" rel="noopener noreferrer"
            hreflang="fr">Accéder au dèrnières infons
             <span class="visually-hidden">(s'ouvre dans un nouvel onglet)</span>
@@ -672,7 +678,8 @@
 
     <section aria-labelledby="careers-heading">
         <h3 id="careers-heading">Carrières</h3>
-        <p>Rejoignez la famille du Brassus. Explorez nos opportunités professionnelles, nos programmes de formation en horlogerie et découvrez comment nous cultivons les talents de demain.</p>
+        <p>Rejoignez la famille du Brassus. Explorez nos opportunités professionnelles, nos programmes de formation en
+            horlogerie et découvrez comment nous cultivons les talents de demain.</p>
         <a href="https://careers.audemarspiguet.com/fr/home" target="_blank" rel="noopener noreferrer"
            hreflang="fr">Rejoindre la famille Brassus
             <span class="visually-hidden">(s'ouvre dans un nouvel onglet)</span>
@@ -686,9 +693,12 @@
             </small>
 
             <ul class="inline-legal-list">
-                <li><a href="https://www.audemarspiguet.com/com/fr/legal/terms-of-use.html">Conditions d’utilisation</a></li>
-                <li><a href="https://www.audemarspiguet.com/com/fr/legal/privacy-notice.html">Déclaration de confidentialité</a></li>
-                <li><a href="https://www.audemarspiguet.com/com/fr/legal/cookie-policy.html">Politique de Cookies</a></li>
+                <li><a href="https://www.audemarspiguet.com/com/fr/legal/terms-of-use.html">Conditions d’utilisation</a>
+                </li>
+                <li><a href="https://www.audemarspiguet.com/com/fr/legal/privacy-notice.html">Déclaration de
+                    confidentialité</a></li>
+                <li><a href="https://www.audemarspiguet.com/com/fr/legal/cookie-policy.html">Politique de Cookies</a>
+                </li>
                 <li><a href="https://www.audemarspiguet.com/com/fr/legal/accessibility.html">Accessibilité</a></li>
             </ul>
         </div>
@@ -697,20 +707,31 @@
             <ul class="legal-notes-list">
                 <li>
                     <small>
-                        * Les valeurs de réserve de marche et de précision chronométrique sont données à titre indicatif. Il est possible que les performances réelles du calibre diffèrent de celles figurant sur le certificat de garantie en fonction des habitudes de porter (activité physique, température). De plus, l'exposition aux champs magnétiques est susceptible d'influencer la régularité de marche. Contactez votre boutique exclusive pour toute information relative à l'entretien de votre garde-temps.
-                        <a href="https://www.audemarspiguet.com/com/fr/services/all-services.html" target="_blank" rel="noopener noreferrer" hreflang="fr">www.audemarspiguet.com/service <span class="visually-hidden">(s'ouvre dans un nouvel onglet)</span></a>
+                        * Les valeurs de réserve de marche et de précision chronométrique sont données à titre
+                        indicatif. Il est possible que les performances réelles du calibre diffèrent de celles figurant
+                        sur le certificat de garantie en fonction des habitudes de porter (activité physique,
+                        température). De plus, l'exposition aux champs magnétiques est susceptible d'influencer la
+                        régularité de marche. Contactez votre boutique exclusive pour toute information relative à
+                        l'entretien de votre garde-temps.
+                        <a href="https://www.audemarspiguet.com/com/fr/services/all-services.html" target="_blank"
+                           rel="noopener noreferrer" hreflang="fr">www.audemarspiguet.com/service <span
+                                class="visually-hidden">(s'ouvre dans un nouvel onglet)</span></a>
                     </small>
                 </li>
 
                 <li>
                     <small>
-                        ** les quantièmes perpétuels sont dotés d’une mémoire mécanique qui cartographie des cycles de temps de 48 mois sans nécessiter de réglage manuel avant 2100.
+                        ** les quantièmes perpétuels sont dotés d’une mémoire mécanique qui cartographie des cycles de
+                        temps de 48 mois sans nécessiter de réglage manuel avant 2100.
                     </small>
                 </li>
 
                 <li>
                     <small>
-                        *** Si vous désirez obtenir de plus amples informations sur les types de bracelets (cuir, caoutchouc, métal) qui peuvent être montés sur ce modèle, les certifications CITES pour les cuirs exotiques, ou la fiche d'entretien des surfaces, veuillez prendre contact avec votre détaillant agréé.
+                        *** Si vous désirez obtenir de plus amples informations sur les types de bracelets (cuir,
+                        caoutchouc, métal) qui peuvent être montés sur ce modèle, les certifications CITES pour les
+                        cuirs exotiques, ou la fiche d'entretien des surfaces, veuillez prendre contact avec votre
+                        détaillant agréé.
                     </small>
                 </li>
 
