adding reset.css

--- a/index.html
+++ b/index.html
@@ -5,26 +5,14 @@
     <title>Royal Oak Quantième Perpétuel | Audemars Piguet</title>
     <meta name="description" content="Découvrez la Royal Oak Quantième Perpétuel (Ref. 26574TI). Une montre d'exception en titane de 41 mm, dotée du Calibre 5134 extra-plat.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/style.css">
 
-    <style>
-        .visually-hidden {
-            position: absolute;
-            width: 1px;
-            height: 1px;
-            padding: 0;
-            margin: -1px;
-            overflow: hidden;
-            clip: rect(0, 0, 0, 0);
-            white-space: nowrap;
-            border: 0;
-        }
-    </style>
 </head>
 <body>
 
-<a href="#main-content" class="skip-link">Aller au contenu principal
-    <span class="visually-hidden">(s'ouvre dans un nouvel onglet)</span>
+<a href="#main-content" class="skip-link visually-hidden" >Aller au contenu principal
+    <span>(s'ouvre dans un nouvel onglet)</span>
 </a>
 
 <header>
@@ -174,7 +162,7 @@
 
             <li>
                 <div class="feature-card">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Masse oscillante en or" width="750" height="750"
+                    <img src="./src/img/desktop/Bracelet%20Intégré%20desktop.webp" alt="Masse oscillante en or" width="1055" height="600"
                          loading="lazy" decoding="async">
                     <h3>Bracelet Intégré.</h3>
                     <p>Le bracelet en acier s'intègre parfaitement au boîtier, avec des maillons de taille décroissante
@@ -200,7 +188,7 @@
         <ul class="features-list">
             <li>
                 <div class="feature-card" id="finishes">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Détail du guillochage" width="750" height="750"
+                    <img src="./src/img/desktop/grande-tapisserie-desktop.webp" alt="Détail du guillochage" width="600" height="600"
                          loading="lazy" decoding="async">
                     <h3>Grande Tapisserie.</h3>
                     <p>Des carrés en relief sont découpés sur le cadran par un outil de tournage automatique ancien,
@@ -210,8 +198,8 @@
 
             <li>
                 <div class="feature-card">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Vis hexagonales en or blanc" width="750"
-                         height="750" loading="lazy" decoding="async">
+                    <img src="./src/img/desktop/Alternance%20des%20finitions%20desktop.webp" alt="Vis hexagonales en or blanc" width="897"
+                         height="600" loading="lazy" decoding="async">
                     <h3>Alternance des finitions.</h3>
                     <p>L'alternance minutieuse des surfaces polies et satinées sur la boîte et le bracelet souligne
                         l'architecture de la montre.</p>
@@ -220,8 +208,8 @@
 
             <li>
                 <div class="feature-card">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Fond saphir de la montre" width="750"
-                         height="750" loading="lazy" decoding="async">
+                    <img src="./src/img/desktop/Architecture%20complexe%20desktop.webp" alt="Fond saphir de la montre" width="900"
+                         height="600" loading="lazy" decoding="async">
                     <h3>Architecture complexe.</h3>
                     <p>L'assemblage du boîtier, de la lunette et du fond nécessite une précision absolue pour garantir
                         l'étanchéité.</p>
@@ -230,7 +218,7 @@
 
             <li>
                 <div class="feature-card">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Alternance poli-satiné" width="750" height="750"
+                    <img src="./src/img/desktop/Vis%20Hexagonales%20desktop.webp" alt="Alternance poli-satiné" width="1067" height="600"
                          loading="lazy" decoding="async">
                     <h3>Vis Hexagonales.</h3>
                     <p>Les 8 vis traversantes en or blanc sont alignées sur la lunette, un défi technique devenu une
@@ -240,8 +228,8 @@
 
             <li>
                 <div class="feature-card" id="materials">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Architecture du boîtier" width="750"
-                         height="750" loading="lazy" decoding="async">
+                    <img src="./src/img/desktop/Fond%20Saphir%20desktop.webp" alt="Architecture du boîtier" width="480"
+                         height="600" loading="lazy" decoding="async">
                     <h3>Fond Saphir.</h3>
                     <p>Le fond de la boîte est muni d'une glace saphir traitée antireflets, révélant la beauté du
                         mécanisme interne.</p>
@@ -250,7 +238,7 @@
 
             <li>
                 <div class="feature-card">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Acier inoxydable" width="750" height="750"
+                    <img src="./src/img/desktop/Verre%20Saphir%20desktop.webp" alt="Acier inoxydable" width="800" height="600"
                          loading="lazy" decoding="async">
                     <h3>Verre Saphir.</h3>
                     <p>Inrayable, le verre saphir protège le cadran tout en assurant une lisibilité parfaite grâce au
@@ -260,7 +248,7 @@
 
             <li>
                 <div class="feature-card">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Verre saphir" width="750" height="750"
+                    <img src="./src/img/desktop/Acier%20Inoxydable%20desktop.webp" alt="Verre saphir" width="400" height="600"
                          loading="lazy" decoding="async">
                     <h3>Acier Inoxydable.</h3>
                     <p>Audemars Piguet utilise un acier inoxydable de haute qualité, offrant une résistance et une
@@ -288,7 +276,7 @@
         <ul class="specs-list">
             <li>
                 <div class="spec-card">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Calibre 4302" width="750" height="750"
+                    <img src="./src/img/desktop/calibre%205134%20desktop.webp" alt="Calibre 4302" width="960" height="600"
                          loading="lazy" decoding="async">
                     <h3>Calibre 5134.</h3>
                     <p>Une mécanique d'exception animée par l'or. Ce mouvement à remontage automatique se distingue par
@@ -299,7 +287,7 @@
 
             <li>
                 <div class="spec-card">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Mécanisme de remontage" width="750" height="750"
+                    <img src="./src/img/desktop/remontage-automatique-desktop.webp" alt="Mécanisme de remontage" width="800" height="600"
                          loading="lazy" decoding="async">
                     <h3>Remontage Automatique.</h3>
                     <p>Une fusion parfaite entre l’homme et la mécanique. L’énergie cinétique de chaque geste arme
@@ -310,7 +298,7 @@
 
             <li>
                 <div class="spec-card">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Balancier en mouvement" width="750" height="750"
+                    <img src="./src/img/desktop/frequence-desktop.webp" alt="Balancier en mouvement" width="800" height="600"
                          loading="lazy" decoding="async">
                     <h3>Fréquence.</h3>
                     <p>Un cœur battant à la cadence de 28 800 alternances par heure (4 Hz). Ce rythme soutenu assure une
@@ -320,7 +308,7 @@
 
             <li>
                 <div class="spec-card">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Anglage main" width="750" height="750"
+                    <img src="./src/img/desktop/angle-main-desktop.webp" alt="Anglage main" width="900" height="600"
                          loading="lazy" decoding="async">
                     <h3>Anglage Main.</h3>
                     <p> La signature de la Haute Horlogerie. Méticuleusement biseautée et polie à la main, chaque arête
@@ -331,7 +319,7 @@
 
             <li>
                 <div class="spec-card">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Rubis synthétiques" width="750" height="750"
+                    <img src="./src/img/desktop/32-rubis-desktop.webp" alt="Rubis synthétiques" width="900" height="600"
                          loading="lazy" decoding="async">
                     <h3>32 Rubis.</h3>
                     <p>Gages de pérennité, 32 rubis assurent une fluidité mécanique absolue. En minimisant les frictions
@@ -342,8 +330,8 @@
 
             <li>
                 <div class="spec-card">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Masse oscillante squelettée" width="750"
-                         height="750" loading="lazy" decoding="async">
+                    <img src="./src/img/desktop/masse-oscillante-desktop.webp" alt="Masse oscillante squelettée" width="600"
+                         height="600" loading="lazy" decoding="async">
                     <h3>Masse Oscillante.</h3>
                     <p>Sculptée dans l’or 22 carats, cette masse oscillante arbore une architecture finement ajourée. Ce
                         design aérien dévoile, par jeu de transparence, toute la profondeur et la beauté du mécanisme
@@ -353,7 +341,7 @@
 
             <li>
                 <div class="spec-card">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Boucle déployante AP" width="750" height="750"
+                    <img src="./src/img/desktop/boucle-deployante-desktop.webp" alt="Boucle déployante AP" width="600" height="600"
                          loading="lazy" decoding="async">
                     <h3>Boucle Déployante.</h3>
                     <p>Signée des initiales AP, cette boucle conjugue confort et sérénité. Son mécanisme à double
@@ -364,7 +352,7 @@
 
             <li>
                 <div class="spec-card">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Couronne vissée" width="750" height="750"
+                    <img src="./src/img/desktop/couronne-vissee-desktop.webp" alt="Couronne vissée" width="900" height="600"
                          loading="lazy" decoding="async">
                     <h3>Couronne Vissée.</h3>
                     <p>Écho esthétique aux vis de la lunette, la couronne hexagonale allie signature visuelle et
@@ -381,7 +369,7 @@
         <ul class="related-list">
             <li>
                 <article aria-labelledby="rel-1">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Quantième Perpétuel" width="750" height="750"
+                    <img src="./src/img/desktop/quantieme-Perpetuel-desktop.webp" alt="Quantième Perpétuel" width="258" height="350"
                          loading="lazy" decoding="async">
                     <h3 id="rel-1">Quantième Perpétuel</h3>
                     <a href="https://www.audemarspiguet.com/com/fr/watch/new-perpetual-calendar-2025.html"
@@ -393,9 +381,9 @@
             </li>
             <li>
                 <article aria-labelledby="rel-2">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Quantième Perpétuel « 150e Anniversaire »"
-                         width="750"
-                         height="750"
+                    <img src="./src/img/desktop/quantieme-Perpetuel-150-desktop.webp" alt="Quantième Perpétuel « 150e Anniversaire »"
+                         width="258"
+                         height="350"
                          loading="lazy" decoding="async">
                     <h3 id="rel-2">Quantième Perpétuel « 150e Anniversaire »</h3>
                     <a href="https://www.audemarspiguet.com/com/fr/watch-collection/royal-oak/26585XT.OO.1220XT.01.html"
@@ -408,7 +396,7 @@
     </section>
 
     <section aria-labelledby="history-heading">
-        <img src="./src/placeholder-image-750x750.jpg" alt="royal oak" width="750" height="750"
+        <img src="./src/img/desktop/revolution-esthetique-desktop-large.webp" alt="royal oak" width="1580" height="1054"
              loading="lazy" decoding="async">
         <h2 id="history-heading">Une Révolution Esthétique</h2>
         <p>Dessinée par Gérald Genta, la Royal Oak tire son succès de son esthétique révolutionnaire qui a brisé les
@@ -426,7 +414,7 @@
         <ul class="model-selector">
             <li>
                 <article aria-labelledby="choice-1">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="grand complication" width="750" height="750"
+                    <img src="./src/img/desktop/grand-complication-desktop.webp" alt="grand complication" width="258" height="350"
                          loading="lazy" decoding="async">
                     <h3 id="choice-1">grand complication</h3>
                     <a href="https://www.audemarspiguet.com/com/fr/watch-collection/royal-oak/26605CB.OO.1248CB.01.html"
@@ -437,8 +425,8 @@
             </li>
             <li>
                 <article aria-labelledby="choice-2">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="tourbillon volant automatique" width="750"
-                         height="750"
+                    <img src="./src/img/desktop/tourbillon-volant-automatique-desktop.webp" alt="tourbillon volant automatique" width="258"
+                         height="350"
                          loading="lazy" decoding="async">
                     <h3 id="choice-2">tourbillon volant automatique</h3>
                     <a href="https://www.audemarspiguet.com/com/fr/watch-collection/royal-oak/26730ST.OO.1320ST.05.html"
@@ -449,9 +437,9 @@
             </li>
             <li>
                 <article aria-labelledby="choice-3">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="tourbillon volant automatique squelette"
-                         width="750"
-                         height="750"
+                    <img src="./src/img/desktop/tourbillon-volant-automatique-squelette-desktop.webp" alt="tourbillon volant automatique squelette"
+                         width="258"
+                         height="350"
                          loading="lazy" decoding="async">
                     <h3 id="choice-3">tourbillon volant automatique squelette</h3>
                     <a href="https://www.audemarspiguet.com/com/fr/watch-collection/royal-oak/26735SG.OO.1320SG.01.html"
@@ -462,8 +450,8 @@
             </li>
             <li>
                 <article aria-labelledby="choice-4">
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Chronographe automatique" width="750"
-                         height="750"
+                    <img src="./src/img/desktop/chronographe-automatique-desktop.webp" alt="Chronographe automatique" width="258"
+                         height="350"
                          loading="lazy" decoding="async">
                     <h3 id="choice-4">Chronographe automatique</h3>
                     <a href="https://www.audemarspiguet.com/com/fr/watch-collection/royal-oak/26240CE.OO.1225CE.02.html"
@@ -487,8 +475,8 @@
             <li>
                 <article aria-labelledby="find-store">
                     <h3 id="find-store">Trouver une Boutique</h3>
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Chronographe automatique" width="750"
-                         height="750"
+                    <img src="./src/img/desktop/trouver-boutique-desktop.webp" alt="Chronographe automatique" width="1196"
+                         height="800"
                          loading="lazy" decoding="async">
                     <p>Avec ou sans rendez-vous, nous vous invitons à nous rendre visite dans nos boutiques et AP Houses
                         pour
@@ -506,8 +494,8 @@
             <li>
                 <article aria-labelledby="about-decorations">
                     <h3 id="about-decorations">à propos des Décorations</h3>
-                    <img src="./src/placeholder-image-750x750.jpg" alt="Chronographe automatique" width="750"
-                         height="750"
+                    <img src="./src/img/desktop/decorations-desktop.webp" alt="Chronographe automatique" width="1221"
+                         height="800"
                          loading="lazy" decoding="async">
                     <p>Au fil des années, les horlogers et artisans Audemars Piguet n'ont eu de cesse de repousser les
                         frontières techniques et théoriques pour concevoir des mécanismes toujours plus exigeants et des
